syntax = "proto3";

package common.v1;

option go_package = "github.com/zerospiel/proto_workshop/options_example/pkg/common;common_pb";
option csharp_namespace = "Company.Namespace.ServiceName.Package.Common";
option java_string_check_utf8 = true;
option java_multiple_files = true;
option java_package = "pb.common.v1";
option java_outer_classname = "CommonProto";
option objc_class_prefix = "ProjectAPI";

message ProxyRequest {
    string mesh_service = 1;
}

message Versioned {
    string service_name = 1;
    string version = 2;
}

message ProxyResponse {
    repeated Versioned chain = 1;
}

service ProxyService {
    rpc Proxy(ProxyRequest) returns (ProxyResponse);
}

message PingRequest {}
message PingResponse {
    Versioned peer = 1;
}

service PingService {
    rpc Ping(PingRequest) returns (PingResponse);
}